# jadata

./: .gitignore  README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  input.rs  lib.rs  main.rs  output.rs
crates/cli/src/input/: kradfile.rs
crates/cli/src/output/: kanjifile.rs  kanjifile_skeleton.rs  wordfile.rs  wordfile_skeleton.rs
crates/jadata/: Cargo.toml  README.md
crates/jadata/src/: kanjifile.rs  lib.rs  wordfile.rs
included/: kanjifile_skeleton.json
scripts/: generate-json.bash  generate-postcard.bash  json.bash  postcard.bash  update-skeletons.bash
