[package]
name = "jadata-cli"
version = "0.1.0"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
rust-version = "1.56"
description = "Derives the wordfile.json and kanjifile.json files."
readme = "../README.md"
repository = "https://github.com/Heliozoa/jadata"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
encoding_rs = "0.8.31"
eyre = "0.6.8"
postcard = {version = "1.0.7", features = ["use-std"] }
serde = { version = "1.0.149", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.89"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wana_kana = "3.0.0"
jadata = { path = "../jadata" }
